# wakey-wakey

./: Cargo.toml
wake-client/: Cargo.toml
wake-client/src/: main.rs  network_info.rs  redis.rs
wake-server/: Cargo.toml
wake-server/src/: main.rs  redis.rs
wake-web/: Cargo.toml
wake-web/src/: main.rs  redis.rs
