[package]
name = "wake-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
log = "0.4.21"
mac_address = "1.1.5"
redis = "0.25.2"
simplelog = "0.12.2"
